--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "lodash": "^4.17.20",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.32.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "typescript": "^4.1.3"
