--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "lodash": "^4.17.20",
     "next": "10.0.5",
     "react": "17.0.1",
