--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "rxjs": "^6.6.6",
     "sass": "^1.32.6"
   },
   "devDependencies": {
