--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "rxjs": "^6.6.6",
-    "sass": "^1.32.6"
+    "sass": "^1.32.6",
+    "scroll": "^3.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "@types/scroll": "^3.0.0",
     "typescript": "^4.1.3"
   }
 }
