--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "lodash": "^4.17.20",
+    "animejs": "^3.2.1",
+    "lodash": "^4.17.21",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -18,6 +19,7 @@
     "scroll": "^3.0.1"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.4",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
