--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.3",
     "animejs": "^3.2.1",
     "lodash": "^4.17.21",
-    "next": "10.0.5",
+    "next": "^12.1.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "rxjs": "^6.6.6",
